logs/prestans.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prestans'...
Listing './lib/python3.5/site-packages/prestans/bin'...
Compiling './lib/python3.5/site-packages/prestans/deserializer.py'...
***   File "./lib/python3.5/site-packages/prestans/deserializer.py", line 55
    except Exception, exp:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prestans/devel'...
Listing './lib/python3.5/site-packages/prestans/devel/gen'...
Listing './lib/python3.5/site-packages/prestans/devel/gen/templates'...
Listing './lib/python3.5/site-packages/prestans/devel/gen/templates/closure'...
Listing './lib/python3.5/site-packages/prestans/devel/gen/templates/closure/filter'...
Listing './lib/python3.5/site-packages/prestans/devel/gen/templates/closure/model'...
Compiling './lib/python3.5/site-packages/prestans/devel/serve.py'...
***   File "./lib/python3.5/site-packages/prestans/devel/serve.py", line 75
    except IOError, exp:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prestans/ext'...
Listing './lib/python3.5/site-packages/prestans/ext/analytics'...
Compiling './lib/python3.5/site-packages/prestans/ext/appengine.py'...
***   File "./lib/python3.5/site-packages/prestans/ext/appengine.py", line 81
    except oauth.OAuthRequestError, exp:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prestans/ext/data'...
Listing './lib/python3.5/site-packages/prestans/ext/data/adapters'...
Compiling './lib/python3.5/site-packages/prestans/ext/data/adapters/ndb.py'...
***   File "./lib/python3.5/site-packages/prestans/ext/data/adapters/ndb.py", line 180
    except TypeError, exp:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prestans/ext/data/adapters/sqlalchemy.py'...
***   File "./lib/python3.5/site-packages/prestans/ext/data/adapters/sqlalchemy.py", line 134
    except TypeError, exp:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/prestans/parser.py'...
***   File "./lib/python3.5/site-packages/prestans/parser.py", line 149
    except prestans.exception.DataValidationException, exp:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prestans/provider'...
Compiling './lib/python3.5/site-packages/prestans/types.py'...
***   File "./lib/python3.5/site-packages/prestans/types.py", line 173
    except Exception, exp:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prestans-2.1.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/issues'...
Listing './lib/python3.5/site-packages/tests/parser'...
Listing './lib/python3.5/site-packages/tests/rest'...
Listing './lib/python3.5/site-packages/tests/types'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
